--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: auto;
+  grid-template-rows: 20%, 60%, 20%;
   grid-template-areas: 
     "leftHead Header rightHead"
     "leftCont Content rightCont"
